Achivement_2/kuber/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: ns-30
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "name-30.hse.ru"
    http:
      paths:
      - backend:
          service:
            name: app-service
            port:
              number: 5000
        path: /
        pathType: Prefix
